--- a/css/style.css
+++ b/css/style.css
@@ -415,6 +415,7 @@ margin-top: 40px;
 {
     flex: 0 0 50%;
     max-width: 50%;
+   overflow-wrap: break-word;
 }
 .about .about-content .personal-info .info-item p
 {
